--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel" data-presets="react,typescript" src="/index.tsx"></script>
   </body>
 </html>
