--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.27.0",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4",
     "path": "https://aistudiocdn.com/path@^0.12.7",
-    "fs": "https://aistudiocdn.com/fs@^0.0.1-security"
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
+    "mongoose": "https://aistudiocdn.com/mongoose@^8.19.3"
   }
 }
 </script>
