--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4",
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
-    "mongoose": "https://aistudiocdn.com/mongoose@^8.19.3"
+    "mongoose": "https://aistudiocdn.com/mongoose@^8.19.3",
+    "url": "https://aistudiocdn.com/url@^0.11.4",
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "express": "https://aistudiocdn.com/express@^5.1.0",
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3"
   }
 }
 </script>
