--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     "express": "https://aistudiocdn.com/express@^5.1.0",
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "url": "https://aistudiocdn.com/url@^0.11.4",
-    "mongoose": "https://aistudiocdn.com/mongoose@^8.19.3"
+    "mongoose": "https://aistudiocdn.com/mongoose@^8.19.3",
+    "process": "https://aistudiocdn.com/process@^0.11.10"
   }
 }
 </script>
