--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
   <body>
     <div id="root"></div>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="text/babel" data-presets="react,typescript" src="/index.tsx"></script>
+    <script type="text/babel" data-presets="react,typescript" src="/index.tsx" data-type="module"></script>
   </body>
 </html>
