feat: Enable Babel for JSX transpilation
Includes Babel standalone for on-the-fly transpilation of JSX in the browser. Updates the script tag in index.html to use `type="text/babel"` and `data-type="module"`.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GourmetGo Catering</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="importmap">
 {
   "imports": {
@@ -15,13 +16,12 @@
     "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.27.0",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4",
-    "cors": "https://aistudiocdn.com/cors@^2.8.5",
-    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
-    "express": "https://aistudiocdn.com/express@^5.1.0",
     "path": "https://aistudiocdn.com/path@^0.12.7",
-    "url": "https://aistudiocdn.com/url@^0.11.4",
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
     "mongoose": "https://aistudiocdn.com/mongoose@^8.19.3",
-    "process": "https://aistudiocdn.com/process@^0.11.10"
+    "express": "https://aistudiocdn.com/express@^5.1.0",
+    "process": "https://aistudiocdn.com/process@^0.11.10",
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3"
   }
 }
 </script>
@@ -44,6 +44,6 @@
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="text/babel" data-type="module" src="/index.tsx"></script>
   </body>
 </html>
